<resources>
    <string name="app_name">Uni-Port</string>
    <string name="title_home">Akış</string>
    <string name="title_dashboard">Modüller</string>
    <string name="title_profile">Profil</string>
    <string name="title_notifications">Ayarlar</string>
    <string name="y_netici_grup_bildirimi">Yönetici/Grup bildirimi</string>
    <string name="haberler">Haberler</string>
    <string name="n_bet_i_bildirimleri">Nöbetçi bildirimleri</string>
    <string name="tfs_bildirimleri">TFS bildirimleri</string>
    <string name="sms_bildirimleri">SMS bildirimleri</string>
    <string name="dll_bildirimleri">DLL bildirimleri</string>
    <string name="loginLongText">[@]univera.com.tr uzantısı olmadan kullanıcı adınız ve şifrenizi giriniz. Giriş kontrolleri büyük-küçük harf duyarlıdır.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="brew_array">
        <item>Cappuccino</item>
        <item>Espresso</item>
        <item>Mocha</item>
        <item>Caffè Americano</item>
        <item>Cafe Zorro</item>
    </string-array>
</resources>